--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "practice-udemy",
   "version": "1.0.0",
   "description": "Complete Node.js guide",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
